--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
     flex: 3;
+    height: fit-content;
     margin: 20px;
     padding-bottom: 30px;
     background-color: #fdfbfb;
@@ -32,6 +33,8 @@
 
 .sidebarItem>img {
     margin-top: 15px;
+    width: 250px;
+    height: 250px;
 }
 
 .sidebarItem>p {
