--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,8 @@
-.heder {
+.header {
     margin-top: 60px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .headerTitles {
@@ -27,5 +30,5 @@
     height: 450px;
     margin-top: 80px;
     object-fit: cover;
-    background-color: black;
+    background-color: purple;
 }
